adiçao do h1, h2, imagem e a primeira lista

--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,15 @@
     <title>atividade ferias</title>
 </head>
 <body>
-    
+    <h1>Minhas Férias</h1>
+    <img src="jogando-fifa.png" alt="uma foto jogando fifa no video game">
+    <h2>coisas que eu fiz nas ferias e gostei</h2>
+    <ol>
+        <li>joguei fifa</li>
+        <li>andei de bike</li>
+        <li>dirige um civic foda</li>
+        <li>sai de casa varias vezes</li>
+        <li>andei de patinete eletrico</li>
+    </ol>
 </body>
 </html>
