segunda lista e html finalizado

--- a/index.htm
+++ b/index.htm
@@ -16,5 +16,14 @@
         <li>sai de casa varias vezes</li>
         <li>andei de patinete eletrico</li>
     </ol>
+
+    <h2>coisas que eu nao gostei de fazer</h2>
+    <ul>
+        <li>ficar as duas primeiras semanas sem fazer nada em casa</li>
+        <li>lavar louça</li>
+        <li>arrumar casa</li>
+        <li>arrumar casa</li>
+        <li>controle do video game puxando</li>
+    </ul>
 </body>
 </html>
